tests/should_fail/duplicate_function.nds
-- Duplicate function definitions
function foo()
	-- does nothing
end function

function foo()
	-- also does nothing
end function
